<resources>
    <string name="app_name">MyTest</string>
    <string name="test_jarayoni">Test Jarayoni</string>
    <string name="testni_boshlash">Testni Boshlash</string>
    <string name="test_natija_0">Test Natija: 0</string>
    <string name="score">Score: 0</string>
    <string name="savollar">Savollar: 20/20</string>
    <string name="vaqt">00:30</string>
    <string name="option_1">Option 1</string>
    <string name="option_3">Option 3</string>
    <string name="option_2">Option 2</string>
    <string name="test_savollari">Test Savollari</string>
    <string name="javobni_tasdiqlash">Javobni Tasdiqlash</string>
    <string name="kategoriya">Kategoriya</string>
</resources>
