<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground"
    android:padding="16dp"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:text="@string/test_jarayoni"
        android:textColor="@android:color/black"
        android:textSize="35sp" />

    <TextView
        android:id="@+id/text_test_natija"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@id/btn_start_test"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="35dp"
        android:text="@string/test_natija_0"
        android:textSize="20sp" />

    <Button
        android:id="@+id/btn_start_test"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:text="@string/testni_boshlash"
        android:textAllCaps="false" />
    <Spinner
        android:id="@+id/spennerKategoriya"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/btn_start_test"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="16dp" />
    <Spinner
        android:id="@+id/spennerDaraja"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/spennerKategoriya"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="16dp" />
</RelativeLayout>